[package]
name = "fuzzy_match_flex"
license = "MIT"
version = "0.1.1"
edition = "2021"
description = "Fuzzy matching library based on the popular `FuzzyWuzzy` library for python."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.3"